<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <TextView
                android:text="@string/sample_certificate_serial_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serialNumberTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/sample_certificate_public_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/publicKeyTextView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/validityTextView"
                app:layout_constraintStart_toStartOf="parent" android:fontFamily="monospace" android:textSize="12sp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:singleLine="false"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/sample_certificate_issuer"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/issuerTextView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/serialNumberTextView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/sample_certificate_validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/validityTextView"
                app:layout_constraintTop_toBottomOf="@+id/subjectTextView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/sample_certificate_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signatureAlgorithmTextView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/publicKeyTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/sample_certificate_raw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rawSignatureTextView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/signatureAlgorithmTextView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:fontFamily="monospace" android:textSize="12sp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:singleLine="false" android:inputType="textMultiLine"/>
        <TextView
                android:text="@string/sample_certificate_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subjectTextView"
                app:layout_constraintTop_toBottomOf="@+id/issuerTextView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
